assets/style.css
.background-blur {
    position: fixed;
    margin-left: auto;
    margin-right: auto;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: -1;
    width: 100%;
    height: 100%;
    object-fit: cover;
    filter: blur(2px);
    -webkit-filter: blur(2px);
    transform: scale(1.1);
}

.vw-50 {
    width: 50vw;
}

.loaded-fade-in {
    opacity: 0;
    transition: all 2s ease;
}

.fullheight {
    height: 100vh
}

.backdrop-blur {
    backdrop-filter: blur(2px);
}

.text-shadow {
    text-shadow: 2px 2px 8px black;
}

.big-text-shadow {
    text-shadow: 2px 2px 3px black;
}

body {
    overflow: hidden;
}

.icon-background {
    background-color: #234c41;
    background: linear-gradient(180deg, #255346 0%, #234c41 100%);
    border-radius: 100px;
}

.social-link {
    text-decoration: none;
    color: white;
    background: #198754;
    background: linear-gradient(180deg, #179158 0%, #198754 100%);
}

.hover-effect {
    transition: transform 0.15s ease-out;
}

.hover-effect:hover {
    transform: scale(1.03);
}

.background-green {
    position: relative;
    background: #234c41;
    background: linear-gradient(180deg, #234c41fb 0%, #0f5434fb 100%);
    overflow-y: auto;
    max-height: 90vh;
}

.scroll-fade {
    position: sticky;
    width: 100%;
    min-height: 50px;
    height: 25%;
    bottom: -1.5rem;
    align-self: flex-end;
    background: linear-gradient(to bottom, transparent, #0f5434);
    pointer-events: none;
    flex-shrink: 0;
}


.w-33 {
    width: 33% !important;
}

@media (min-width: 1350px) {
    .w-lg-50 {
        width: 50% !important;
    }

    .w-lg-25 {
        width: 25% !important;
    }
}

@media ((min-width: 1000px) and (max-width: 1349px)) {
    .w-md-66 {
        width: 66% !important;
    }

    .w-md-25 {
        width: 25% !important;
    }
}

.w-95 {
    width: 95%;
}

